# Editor

./: CMakeLists.txt  Editor  EntryPoint.cpp  MeshExporter_v0.0.1.py  imgui.ini
.cache/clangd/index/: Common.hpp.ABB342B25BFB9507.idx  Components.hpp.BFDA1A3637BA18DC.idx  Container.hpp.744C8CB033624D69.idx  Core.cpp.8478019133ECB24D.idx  Debug.hpp.5306713CCF80B69A.idx  Editor.cpp.360280F8F6197D25.idx  Editor.hpp.49342091DC17F09C.idx  EntryPoint.cpp.969F5FE328C82142.idx  GameObject.hpp.E764D482948BF217.idx  Math.cpp.96E4EF0ADE68197D.idx  Matrices.hpp.07E3985C02178FE9.idx  Matrix4x4.hpp.6BD02B5A0A594E62.idx  PrimaryRenderer.hpp.FE215E51BB1619DE.idx  Quaternion.hpp.1C2F74CAEE7B1C57.idx  Renderer.cpp.18323FD93ADAA9D7.idx  Utils.hpp.256D3A0D1AE2DEBA.idx  Utils.hpp.DFDDB335135F417F.idx  Vector2.hpp.4A593CB454D8EB49.idx  Vector3.hpp.98B0F0131B873463.idx  Vector4.hpp.731E1E428FA2CBEB.idx  Window.cpp.77EF1AF95A5C314F.idx  Window.hpp.EAD5CBE2E74A459E.idx  glad.c.89166377FCEE09B3.idx  glad.h.D3A23CF88CB594CA.idx  imconfig.h.5AE6695BE32FD753.idx  imconfig.h.76F3FB7DBAF2B297.idx  imgui.cpp.00DF5CE287B1A092.idx  imgui.cpp.2BCADE28CEE4F918.idx  imgui.h.81112283489B1907.idx  imgui.h.928A1B20A8834A02.idx  imgui_demo.cpp.71D38F6DB057A1CA.idx  imgui_demo.cpp.E1FD8E7F0A75208C.idx  imgui_draw.cpp.695F770AB422E94C.idx  imgui_draw.cpp.D734D4809AD0131F.idx  imgui_impl_glfw.cpp.67AF68798DCC4F5D.idx  imgui_impl_glfw.cpp.DD387D27BDBBBB26.idx  imgui_impl_glfw.h.50F09FC3D5DB3F0C.idx  imgui_impl_glfw.h.6A002170A0E39137.idx  imgui_impl_opengl3.cpp.04AE00584A0F99E6.idx  imgui_impl_opengl3.cpp.D2FB231B7EC7E0D7.idx  (+20 more)
Core/: CMakeLists.txt
Core/Math/: CMakeLists.txt  Math.cpp
Core/Math/include/: Common.hpp  Math.hpp  Matrices.hpp  Matrix4x4.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Core/Math/src/: src.cpp
Core/Renderer/: CMakeLists.txt
Core/Renderer/include/: PrimaryRenderer.hpp  Renderer.hpp
Core/Renderer/include/glad/: glad.h
Core/Renderer/src/: Renderer.cpp  glad.c  src.cpp
Core/include/: Container.hpp  GameObjectManager.hpp  KeyBinding.hpp  SceneManager.hpp
Core/include/Components/: Components.hpp  GameObject.hpp
Core/include/Utils/: Debug.hpp  Utils.hpp
Core/include/Window/: Window.hpp
Core/src/: Window.cpp  src.cpp
include/: Editor.hpp
src/: Editor.cpp
